--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <title>Dharma Sprouts</title>
 </head>
 
-<body class="home" onload="print_all_tags()">
-
+<body class="home">
+<!-- <body class="home" onclick="print_all_tags()"> -->
   <header>
     <div id="logo">
       <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
@@ -77,10 +77,9 @@
         </div>
 
         <div id="tags">
-          <!-- <button onclick="print_all_tags()">print book names in console</button> -->
           <ul id="display-tags">
-
           </ul>
+          
         </div>
 
       </div>
@@ -96,8 +95,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="test.json></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 
