--- a/show_tags.html
+++ b/show_tags.html
@@ -12,8 +12,8 @@
   <title></title>
 </head>
 
-<body class="home" onload="display_tags_divs()">
-
+<body class="home" onload="displayDivs()">
+<!-- <body class="home"> -->
   <header>
     <div id="logo">
       <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
@@ -42,16 +42,6 @@
 
   <div class="content">
 
-  	<div id="personalized_bar">
-      <div id="left">
-        <h4>Want personalized picks that fit your family/school?</h4>
-        <h6>Set preferences to see our top age-appropriate picks.</h6>
-      </div>
-      <div id="right">
-        <button id="yellow_button">Get age appropriate picks!</button>
-      </div>
-    </div>
-
     <div id="outter_display_area">
         <div id="inner">
             
@@ -68,7 +58,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="js/show_tags.js"></script>
+  <script type="text/javascript" src="js/showTags.js"></script>
+ 
   <script type="text/javascript" src="test.json></script>
 </body>
 
