chn nav and search

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 
 
     <div id="search-container-1">
-      <form action="">
+      <form action="" id="searchInfo">
         <input type="text" placeholder="What are you looking for?" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
       <div id="lang">
-        <a href="">English</a> | <a href="">中文</a>
+        <span id="eng">English</span> | <span id="chn">中文</span>
       </div>
     </div>
   </header>
 
   <nav>
-    <ul>
+    <ul class="navLink">
       <li><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
       <li><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
       <li><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
@@ -131,7 +131,7 @@
 
     </div>
   </div>
-  <footer>This website is lunched by Tsechen Kunchab Ling under a grant from the Sachen Foundation.</footer>
+  <footer>This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation.</footer>
 
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
