--- a/show_tags.html
+++ b/show_tags.html
@@ -21,18 +21,18 @@
 
 
     <div id="search-container-1">
-      <form action="">
+      <form action="" id="searchInfo">
         <input type="text" placeholder="What are you looking for?" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
       <div id="lang">
-        <a href="">English</a> | <a href="">中文</a>
+        <span id="eng">English</span> | <span id="chn">中文</span>
       </div>
     </div>
   </header>
 
   <nav>
-        <ul>
+        <ul class="navLink">
           <li><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
           <li><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
           <li><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
@@ -49,6 +49,8 @@
     </div>
 
   </div>
+
+  <footer>This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation.</footer>
 <!-- end of .content -->
 
 
@@ -59,7 +61,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="js/showTags.js"></script>
- 
   <script type="text/javascript" src="test.json></script>
 </body>
 
