--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
       <div id="lang">
-        <span id="eng">English</span> | <span id="chn">中文</span>
+          <a href="index.html">English</a> | <span id="chn">中文</span>
       </div>
     </div>
   </header>
