trying google search

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <title>Dharma Sprouts</title>
@@ -21,10 +22,12 @@
 
 
     <div id="search-container-1">
-      <form action="" id="searchInfo">
+          
+      <div class="gcse-search"></div>
+      <!-- <form action="" id="searchInfo">
         <input type="text" placeholder="What are you looking for?" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
+      </form> -->
       <div id="lang">
           <a href="index.html">English</a> | <span id="chn">中文</span>
       </div>
@@ -37,6 +40,7 @@
       <li><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
       <li><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
       <li><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
+      <li id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
     </ul>
   </nav>
 
@@ -54,6 +58,9 @@
 
     <!--------------         Modal             ---------->
 
+    <!-- <div id="forModasl">
+
+    </div> -->
     <div class="modal fade" id="firstModal" tabindex="-1" role="dialog" aria-labelledby="firstModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -112,7 +119,7 @@
             <p id="search2-label">Browse By Topic</p>
             <div id="search-container-2">
                 <form action="" id="tag-filter">
-                  <input type="text" placeholder="Search for a topic" name="search">
+                  <input type="text" placeholder="Filter by topic" name="search">
                   <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
