--- a/search.html
+++ b/search.html
@@ -7,12 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <title></title>
 </head>
 
-<body class="home" onload="displayDivs()">
+<body class="home" >
 <!-- <body class="home"> -->
   <header>
     <div id="logo">
@@ -21,10 +22,12 @@
 
 
     <div id="search-container-1">
-      <form action="" id="searchInfo">
+    
+        <div class="gcse-search"></div>
+      <!-- <form action="" id="searchInfo">
         <input type="text" placeholder="What are you looking for?" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
+      </form> -->
       <div id="lang">
         <span id="eng">English</span> | <span id="chn">中文</span>
       </div>
@@ -61,7 +64,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="js/showTags.js"></script>
+  <script type="text/javascript" src="js/search.js"></script>
 </body>
 
 
