removed google search

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 
     <div id="search-container-1">
-          
-      <div class="gcse-search"></div>
-      <!-- <form action="" id="searchInfo">
+<!--           
+      <div class="gcse-search"></div> -->
+      <form action="" id="searchInfo">
         <input type="text" placeholder="What are you looking for?" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
-      </form> -->
+      </form>
       <div id="lang">
           <a href="index.html">English</a> | <span id="chn">中文</span>
       </div>
