--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, , shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script>
+  <!-- <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script> -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://kit.fontawesome.com/e2fb2d2dd0.js" crossorigin="anonymous"></script>
 
   <title>Dharma Sprouts</title>
 </head>
@@ -16,36 +16,34 @@
 <body class="home" onload="printTags('db.json')" >
 
   <header>
-    <div id="logo">
+    <div id="header-left">
       <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
     </div>
-
-
-    <div id="search-container-1">
-<!--           
-      <div class="gcse-search"></div> -->
-      <form action="" id="searchInfo">
-        <input type="text" placeholder="What are you looking for?" name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-      <div id="lang">
-          <a href="index.html">English</a> | <span id="chn">中文</span>
+    <div id="header-right">
+      <div id="header-right-inner">    
+        <!-- <div class="gcse-search"></div> -->
+        <form action="search.html" id="searchInfo" method="GET">
+          <input type="text" placeholder="What are you looking for?" name="search" class="formText">
+          <button type="submit" class="icon-search"><i class="fas fa-search"></i></button>
+        </form>
+        <div id="lang">
+            <a href="index.html">English</a> | <span id="chn">中文</span>
+        </div>
       </div>
     </div>
   </header>
 
   <nav>
-    <ul class="navLink">
-      <li><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
-      <li><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
-      <li><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
-      <li><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
-      <li id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
+    <ul class="nav nav-fill">
+      <li class="nav-item"><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
+      <li class="nav-item"><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
+      <li class="nav-item"><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
+      <li class="nav-item"><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
+      <li class="nav-item" id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
     </ul>
   </nav>
 
   <div class="content">
-
   	<div id="personalized_bar">
       <div id="left">
         <h4>Want personalized picks that fit your family/school?</h4>
@@ -55,23 +53,23 @@
         <button id="yellow_button" type="button" data-toggle="modal" data-target="#firstModal">Get age appropriate picks!</button>
       </div>
     </div>
+    <!-- end of #personalized_bar -->
 
     <!--------------         Modal             ---------->
-
-    <!-- <div id="forModasl">
-
-    </div> -->
     <div class="modal fade" id="firstModal" tabindex="-1" role="dialog" aria-labelledby="firstModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div class="modal-body">
-          <button id="minus">-</button>
-            <span id="ageNumber"></span>
-          <button id="add">+</button>
+          <div class="modal-body custom-modal">
+            <span>Select Age</span>
+            <div id="number-btn-group">
+              <button id="minus">-</button>
+                <span id="ageNumber"></span>
+              <button id="add">+</button>
+            </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModal">Close</button>
-            <button type="button" class="btn btn-primary" id="nextModal" >Next</button>
+          <div class="modal-footer custom-modal">
+            <button type="button" class="btn custom-modal-btn" data-dismiss="modal" id="closeModal">Close</button>
+            <button type="button" class="btn custom-modal-btn" id="nextModal" >Next</button>
           </div>
         </div>
       </div>
@@ -81,21 +79,14 @@
     <div class="modal fade" id="secondModal" tabindex="-1" role="dialog" aria-labelledby="firstModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-header">
-              <!-- <h5 class="modal-title" id="pickFilterLabel">Modal title</h5> -->
-              <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button> -->
-            </div>
-            <div class="modal-body">
+            <div class="modal-body custom-modal">
               <form action="" id="tagsCheckbox" method="POST">
-
               </form>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close">Close</button>
+            <div class="modal-footer second-custom-modal">
+              <button type="button" class="btn custom-modal-btn" data-dismiss="modal" id="close">Close</button>
               <a href="" id="toTagPage" >
-                <button type="button" class="btn btn-primary" id="submitModalInfo" >Submit</button>
+                <button type="button" class="btn custom-modal-btn" id="submitModalInfo" >Submit</button>
               </a>
             </div>
           </div>
@@ -119,8 +110,8 @@
             <p id="search2-label">Browse By Topic</p>
             <div id="search-container-2">
                 <form action="" id="tag-filter">
-                  <input type="text" placeholder="Filter by topic" name="search">
-                  <button type="submit"><i class="fa fa-search"></i></button>
+                  <input type="text" placeholder="Filter by topic" name="search" >
+                  <!-- <button type="submit" ><i class="fa fa-search"></i></button> -->
                 </form>
             </div>
         </div>
@@ -137,7 +128,9 @@
 
     </div>
   </div>
-  <footer>This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation.</footer>
+  <footer>
+    This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation. Contact: sakya@sakyatemple.org
+  </footer>
 
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
