--- a/search.html
+++ b/search.html
@@ -13,36 +13,35 @@
   <title></title>
 </head>
 
-<body class="home" >
+<body class="home" onload="displayResult()">
 <!-- <body class="home"> -->
-  <header>
-    <div id="logo">
-      <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
-    </div>
-
-
-    <div id="search-container-1">
-    
-        <div class="gcse-search"></div>
-      <!-- <form action="" id="searchInfo">
-        <input type="text" placeholder="What are you looking for?" name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form> -->
-      <div id="lang">
-        <span id="eng">English</span> | <span id="chn">中文</span>
-      </div>
-    </div>
-  </header>
-
-  <nav>
-        <ul class="navLink">
-          <li><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
-          <li><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
-          <li><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
-          <li><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
-          <li id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
+    <header>
+        <div id="header-left">
+          <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
+        </div>
+        <div id="header-right">
+          <div id="header-right-inner">    
+            <!-- <div class="gcse-search"></div> -->
+            <form action="search.html" id="searchInfo" method="GET">
+              <input type="text" placeholder="What are you looking for?" name="search" class="formText">
+              <button type="submit" class="icon-search"><i class="fa fa-search"></i></button>
+            </form>
+            <div id="lang">
+                <a href="index.html">English</a> | <span id="chn">中文</span>
+            </div>
+          </div>
+        </div>
+      </header>
+  
+    <nav>
+        <ul class="nav nav-fill">
+          <li class="nav-item"><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
+          <li class="nav-item"><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
+          <li class="nav-item"><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
+          <li class="nav-item"><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
+          <li class="nav-item" id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
         </ul>
- </nav>
+    </nav>
 
   <div class="content">
 
