--- a/show_tags.html
+++ b/show_tags.html
@@ -6,40 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, , shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://kit.fontawesome.com/e2fb2d2dd0.js" crossorigin="anonymous"></script>
 
-  <title></title>
+  <title>Dharma Sprouts</title>
 </head>
 
 <body class="home" onload="displayDivs()">
 <!-- <body class="home"> -->
   <header>
-    <div id="logo">
-      <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
-    </div>
-
-
-    <div id="search-container-1">
-      <form action="" id="searchInfo">
-        <input type="text" placeholder="What are you looking for?" name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-      <div id="lang">
-        <span id="eng">English</span> | <span id="chn">中文</span>
+      <div id="header-left">
+        <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
       </div>
-    </div>
-  </header>
+      <div id="header-right">
+        <div id="header-right-inner">    
+          <form action="search.html" id="searchInfo" method="GET">
+            <input type="text" placeholder="What are you looking for?" name="search" class="formText">
+            <button type="submit" class="icon-search"><i class="fa fa-search"></i></button>
+          </form>
+          <div id="lang">
+              <a href="index.html">English</a> | <span id="chn">中文</span>
+          </div>
+        </div>
+      </div>
+    </header>
 
   <nav>
-        <ul class="navLink">
-          <li><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
-          <li><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
-          <li><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
-          <li><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
-          <li id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
-        </ul>
- </nav>
+      <ul class="nav nav-fill">
+        <li class="nav-item"><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
+        <li class="nav-item"><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
+        <li class="nav-item"><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
+        <li class="nav-item"><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
+        <li class="nav-item" id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
+      </ul>
+  </nav>
+
+  <button id="backToTop" onclick="topFunction()"><i class="fad fa-angle-double-up fa-2x"></i></button>
 
   <div class="content">
 
