--- a/index.html
+++ b/index.html
@@ -16,13 +16,27 @@
 <body class="home" onload="printTags('db.json')" >
 
   <header>
+  <!-- sidenav menu when screen get smaller  -->
+  <div class="nav-item dropdown hamburger">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-bars"></i>
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="show_tags.html?val=Age%202-5">Age 2-5</a>
+        <a class="dropdown-item" href="show_tags.html?val=Age%206-8">Age 6-8</a>
+        <a class="dropdown-item" href="show_tags.html?val=Age%209-12">Age 9-12</a>
+        <a class="dropdown-item" href="show_tags.html?val=Age%2013+">Age 13+</a>
+        <a class="dropdown-item" href="show_tags.html?val=For%20Teachers">For Teachers</a>
+      </div>
+  </div>
+
     <div id="header-left">
       <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
     </div>
     <div id="header-right">
       <div id="header-right-inner">    
         <!-- <div class="gcse-search"></div> -->
-        <form action="search.html" id="searchInfo" method="GET">
+        <form action="search.html" id="searchInfo" class="show" method="GET">
           <input type="text" placeholder="What are you looking for?" name="search" class="formText">
           <button type="submit" class="icon-search"><i class="fas fa-search"></i></button>
         </form>
@@ -35,11 +49,11 @@
 
   <nav>
     <ul class="nav nav-fill">
-      <li class="nav-item"><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
-      <li class="nav-item"><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
-      <li class="nav-item"><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
-      <li class="nav-item"><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
-      <li class="nav-item" id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
+      <li class="nav-item show"><a href="show_tags.html?val=Age%202-5">Age 2-5</a></li>
+      <li class="nav-item show"><a href="show_tags.html?val=Age%206-8">Age 6-8</a></li>
+      <li class="nav-item show"><a href="show_tags.html?val=Age%209-12">Age 9-12</a></li>
+      <li class="nav-item show"><a href="show_tags.html?val=Age%2013+">Age 13+</a></li>
+      <li class="nav-item show" id="teacher"><a href="show_tags.html?val=For%20Teachers">For Teachers</a></li>
     </ul>
   </nav>
 
@@ -136,6 +150,7 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
   <script src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="js/index.js"></script>
