--- a/show_tags.html
+++ b/show_tags.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, , shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script> -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://kit.fontawesome.com/e2fb2d2dd0.js" crossorigin="anonymous"></script>
 
@@ -14,37 +15,34 @@
 
 <body class="home" onload="displayDivs()">
 <!-- <body class="home"> -->
-    <header>
-        <!-- sidenav menu when screen get smaller  -->
-        <div class="nav-item dropdown hamburger">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="show_tags.html?val=Age%202-5">Age 2-5</a>
-              <a class="dropdown-item" href="show_tags.html?val=Age%206-8">Age 6-8</a>
-              <a class="dropdown-item" href="show_tags.html?val=Age%209-12">Age 9-12</a>
-              <a class="dropdown-item" href="show_tags.html?val=Age%2013+">Age 13+</a>
-              <a class="dropdown-item" href="show_tags.html?val=For%20Teachers">For Teachers</a>
-            </div>
+  <header>
+    <!-- sidenav menu when screen get smaller  -->
+    <div class="nav-item dropdown hamburger">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="show_tags.html?val=Age%202-5">Age 2-5</a>
+          <a class="dropdown-item" href="show_tags.html?val=Age%206-8">Age 6-8</a>
+          <a class="dropdown-item" href="show_tags.html?val=Age%209-12">Age 9-12</a>
+          <a class="dropdown-item" href="show_tags.html?val=Age%2013+">Age 13+</a>
+          <a class="dropdown-item" href="show_tags.html?val=For%20Teachers">For Teachers</a>
         </div>
-      
-          <div id="header-left">
-            <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
-          </div>
-          <div id="header-right">
-            <div id="header-right-inner">    
-              <!-- <div class="gcse-search"></div> -->
-              <form action="search.html" id="searchInfo" class="show" method="GET">
-                <input type="text" placeholder="What are you looking for?" name="search" class="formText">
-                <button type="submit" class="icon-search"><i class="fas fa-search"></i></button>
-              </form>
-              <div id="lang">
-                  <a href="index.html">English</a> | <span id="chn">中文</span>
-              </div>
-            </div>
-          </div>
-        </header>
+    </div>
+  
+      <div id="header-left">
+        <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
+      </div>
+      <div id="header-right">
+        <div id="header-right-inner">    
+          <!-- <div class="gcse-search"></div> -->
+          <form action="search.html" id="searchInfo" class="show" method="GET">
+            <input type="text" placeholder="What are you looking for?" name="search" class="formText">
+            <button type="submit" class="icon-search"><i class="fas fa-search"></i></button>
+          </form>
+        </div>
+      </div>
+   </header>
 
   <nav>
       <ul class="nav nav-fill">
