--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
   <header>
       <!-- sidenav menu when screen get smaller  -->
       <div class="nav-item dropdown hamburger">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fas fa-bars"></i>
           </button>
           <div class="dropdown-menu">
