--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button type="submit" class="icon-search"><i class="fas fa-search"></i></button>
         </form>
         <div id="lang">
-            <a href="index.html">English</a> | <span id="chn">中文</span>
+            <a id="eng" href="index.html">English</a> | <span id="chn">中文</span>
         </div>
       </div>
     </div>
