--- a/chn.html
+++ b/chn.html
@@ -17,7 +17,7 @@
 
     <header>
         <!-- sidenav menu when screen get smaller  -->
-        <div class="nav-item dropdown hamburger">
+        <!-- <div class="nav-item dropdown hamburger">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-bars"></i>
             </button>
@@ -28,7 +28,9 @@
               <a class="dropdown-item" href="show_tags.html?val=Age%2013+">Age 13+</a>
               <a class="dropdown-item" href="show_tags.html?val=For%20Teachers">For Teachers</a>
             </div>
-        </div>
+        </div> -->
+          <div class="hamburger">
+          </div>
       
           <div id="header-left">
             <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
@@ -62,6 +64,7 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
   <script src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="js/chn.js"></script>
