--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <!-- <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script> -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://kit.fontawesome.com/e2fb2d2dd0.js" crossorigin="anonymous"></script>
-
   <title>Dharma Sprouts</title>
 </head>
 
@@ -17,7 +16,7 @@
 
   <header>
   <!-- sidenav menu when screen get smaller  -->
-  <div class="nav-item dropdown hamburger">
+  <!-- <div class="nav-item dropdown hamburger">
       <button class="btn " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-bars"></i>
       </button>
@@ -28,7 +27,7 @@
         <a class="dropdown-item" href="show_tags.html?val=Age%2013+">Age 13+</a>
         <a class="dropdown-item" href="show_tags.html?val=For%20Teachers">For Teachers</a>
       </div>
-  </div>
+  </div> -->
 
     <div id="header-left">
       <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
@@ -136,12 +135,13 @@
           </ul>
         </div>
        <!-- end of #tags -->
-
       </div>
       <!-- end of #right-side -->
 
     </div>
+    <!-- end of #into_tags -->
   </div>
+  <!-- end of #content -->
   <footer>
     This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation. Contact: sakya@sakyatemple.org
   </footer>
