--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <header>
   <!-- sidenav menu when screen get smaller  -->
-  <!-- <div class="nav-item dropdown hamburger">
+  <div class="nav-item dropdown hamburger">
       <button class="btn " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-bars"></i>
       </button>
@@ -27,7 +27,7 @@
         <a class="dropdown-item" href="show_tags.html?val=Age%2013+">Age 13+</a>
         <a class="dropdown-item" href="show_tags.html?val=For%20Teachers">For Teachers</a>
       </div>
-  </div> -->
+  </div>
 
     <div id="header-left">
       <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
