search page backtotop btn added

--- a/search.html
+++ b/search.html
@@ -40,12 +40,11 @@
               <input type="text" placeholder="What are you looking for?" name="search" class="formText">
               <button type="submit" class="icon-search"><i class="fas fa-search"></i></button>
             </form>
-            <div id="lang">
-                <a href="index.html">English</a> | <span id="chn">中文</span>
-            </div>
           </div>
         </div>
       </header>
+      
+  <button id="backToTop" onclick="topFunction()"><i class="fad fa-angle-double-up fa-2x"></i></button>
 
   <div class="content">
 
