chn.js backtotop btn added

--- a/chn.html
+++ b/chn.html
@@ -46,7 +46,8 @@
           </div>
     </header>
 
-
+    <button id="backToTop" onclick="topFunction()"><i class="fad fa-angle-double-up fa-2x"></i></button>
+    
     <div class="content">
 
         <div id="outter_display_area">
