more material added

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script> -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel='shortcut icon' href='images/icon.png' type='image/png' />
   <script src="https://kit.fontawesome.com/e2fb2d2dd0.js" crossorigin="anonymous"></script>
   <title>Dharma Sprouts</title>
 </head>
 
-<body class="home" onload="printTags('db.json')" >
+<body class="home" onload="printTags()" >
 
   <header>
   <!-- sidenav menu when screen get smaller  -->
