paragraph added and footer changed

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
               Chinese Dharma materials for youth and children to help families 
               and Dharma centers find and use the rich Buddhist materials already available.
         </p>
+        <p>
+            This website was created by <a href="https://sakyatemple.org/">Tsechen Kunchab Ling</a> under a grant from the <a href="http://www.sachenfoundation.org">Sachen Foundation</a>. <a href="https://sakyatemple.org/">Tsechen Kunchab Ling</a> is a Buddhist Temple practicing in the Sakya Tradition of Tibetan Buddhism. It is the seat of Sakya Dolma Phodrang in the Americas. The <a href="http://www.sachenfoundation.org/">Sachen Foundation</a> is a non-profit organization under the leadership of His Holiness the 42nd Sakya Trizin. Its mission is to help transform lives and communities through Dharma education and publication. 
+        </p>
       </div>
 
       <div id="right-side">
@@ -143,7 +146,8 @@
   </div>
   <!-- end of #content -->
   <footer>
-    This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation. Contact: sakya@sakyatemple.org
+    This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation. <br>
+    Contact and suggestions: sakya@sakyatemple.org
   </footer>
 
 
