--- a/show_tags.html
+++ b/show_tags.html
@@ -66,7 +66,8 @@
 
   </div>
 
-  <footer>This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation.</footer>
+  <footer>This website is launched by Tsechen Kunchab Ling under a grant from the Sachen Foundation. <br>
+    Contact and suggestions: sakya@sakyatemple.org</footer>
 <!-- end of .content -->
 
 
