--- a/search.html
+++ b/search.html
@@ -9,6 +9,7 @@
   <!-- <script async src="https://cse.google.com/cse.js?cx=005619157874682358701:ninei1dsn9a"></script> -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://kit.fontawesome.com/e2fb2d2dd0.js" crossorigin="anonymous"></script>
+  
 
   <title>Dharma Sprouts</title>
 </head>
@@ -62,6 +63,7 @@
 
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.es6.min.js" charset="UTF-8"></script>
   <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
   <script src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
