description p tag added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   </div>
 
     <div id="header-left">
-      <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
+      <a href="index.html">
+        <img src="images/newlogo.jpeg" alt="Logo">      
+      </a>
+      <p id="introP">Dharma materials for children and youth</p>
     </div>
     <div id="header-right">
       <div id="header-right-inner">    
