--- a/search.html
+++ b/search.html
@@ -33,6 +33,7 @@
     
         <div id="header-left">
           <a href="index.html"><img src="images/newlogo.jpeg" alt="Logo"></a>
+          <p id="introP">Dharma materials for children and youth</p>
         </div>
         <div id="header-right">
           <div id="header-right-inner">    
